workers/harness-tui/tests/snapshots/render_snapshot__after_user_assistant_80x20.snap
---
source: workers/harness-tui/tests/render_snapshot.rs
expression: rendered
---
harness  ·  anthropic claude-sonnet  ·  cwd: /snap/cwd
────────────────────────────────────────────────────────────────────────────────
>>> user: list workspace crates
Sure, here's the listing.










────────────────────────────────────────────────────────────────────────────────

┌input─────────────────────────────────────────────────────────────────────────┐
│>                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
                           0 turns · ↑0 ↓0 · $- · ctx 0k/200k · think:off · idle
