workers/harness-tui/tests/snapshots/render_snapshot__running_with_tool_call_80x22.snap
---
source: workers/harness-tui/tests/render_snapshot.rs
expression: rendered
---
harness  ·  anthropic claude-sonnet  ·  cwd: /snap/cwd
────────────────────────────────────────────────────────────────────────────────
>>> user: list .rs files













────────────────────────────────────────────────────────────────────────────────
⠋ 0:00                                                                  tool: ls
┌input─────────────────────────────────────────────────────────────────────────┐
│>                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
                        0 turns · ↑0 ↓0 · $- · ctx 0k/200k · think:off · running
