workers/harness-tui/tests/snapshots/render_snapshot__tool_execution_end_80x22.snap
---
source: workers/harness-tui/tests/render_snapshot.rs
expression: rendered
---
harness  ·  anthropic claude-sonnet  ·  cwd: /snap/cwd
────────────────────────────────────────────────────────────────────────────────
      [tool ok] Darwin arm64  <expand: Ctrl+O>













────────────────────────────────────────────────────────────────────────────────
⠋ 0:00
┌input─────────────────────────────────────────────────────────────────────────┐
│>                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
                        0 turns · ↑0 ↓0 · $- · ctx 0k/200k · think:off · running
