workers/harness-tui/tests/snapshots/render_snapshot__wide_120x30.snap
---
source: workers/harness-tui/tests/render_snapshot.rs
expression: rendered
---
harness  ·  anthropic claude-sonnet  ·  cwd: /snap/cwd
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>>> user: wide screen test





















────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

┌input─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│>                                                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                   0 turns · ↑0 ↓0 · $- · ctx 0k/200k · think:off · idle
